Changed the size of carousel arrows

--- a/Front_End/styles/index.css
+++ b/Front_End/styles/index.css
@@ -71,3 +71,9 @@
 .carousel-caption h4 {
     font-weight: bold;
 }
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  height: 2.7rem;
+  width: 2.7rem;
+}
