Login/Signup modals when you click links
Added two modal dialogs where the forms for login and signup should reside. The forms will be added at a latter time

--- a/Front_End/styles/index.css
+++ b/Front_End/styles/index.css
@@ -118,3 +118,9 @@
     border-radius: 15px;
     object-fit: cover;
 }
+
+.modal-header h5{
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
+}
