--- a/Front_End/styles/index.css
+++ b/Front_End/styles/index.css
@@ -64,12 +64,13 @@
 
 .carousel-item img {
     width: 100%;
-    height: 48em;
+    height: 55vh;
     object-fit: cover;
 }
 
 .carousel-caption h4 {
     font-weight: bold;
+    font-size: calc(1rem + 0.5vh);
 }
 
 .carousel-control-prev-icon,
@@ -141,4 +142,20 @@
 
 .sign-row2{
     width: 80%;
+}
+
+@media only screen and (max-width: 500px){
+    .carousel-item img{
+        width: 100%;
+        height: 35vh;
+    }
+}
+
+@media only screen and (min-width: 1800px){
+    .carousel-caption p{
+        font-size: calc(12px + 0.8vw);
+    }
+    .carousel-caption h4{
+        font-size: calc(14px + 0.9vw);
+    }
 }
