--- a/Front_End/styles/team.css
+++ b/Front_End/styles/team.css
@@ -1,6 +1,17 @@
-img{
-    width: 20vw;
-    height: 20vh;
-    left: 50%;
-    transform: translate(-50%);
+body{
+    background-color: white;
+}
+
+.banner{
+    max-width: 100vw;
+    margin-top: 1rem;
+}
+
+.banner img{
+    width: 100%;
+    max-width: 500px;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
