--- a/Front_End/styles/team.css
+++ b/Front_End/styles/team.css
@@ -15,3 +15,14 @@ body{
     margin-left: auto;
     margin-right: auto;
 }
+
+
+.col img{
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 1rem;
+}
