--- a/Front_End/styles/team.css
+++ b/Front_End/styles/team.css
@@ -16,7 +16,6 @@ body{
     margin-right: auto;
 }
 
-
 .col img{
     width: 150px;
     height: 150px;
@@ -25,4 +24,13 @@ body{
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 1rem;
+}
+
+.col p,li{
+    color: #009688;
+    font-weight: 500;
+}
+
+.col ul{
+    list-style: square;
 }
