--- a/Front_End/styles/pricing.css
+++ b/Front_End/styles/pricing.css
@@ -1,23 +1,70 @@
+body{
+  height: 100%;
+  background-image: url("../res/photos/pricing/bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 
 .title{
-    color: white;
-    padding: 1rem;
+  font-size: calc(2rem + 0.5vw);
+  color: white;
+  padding: .2rem;
 }
 
 .subtitle{
-    margin: 1rem;
-    color: whitesmoke;
+  font-size: calc(1.8rem + 0.5vw);
+  color: whitesmoke;
 }
 
 main .col{
-    margin-top: 10vh;
-    color: #009688;
-    font-weight: bolder;
+  margin-top: 10vh;
+  color: #009688;
+  font-weight: bolder;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin: 2rem;
+  margin-top: 5rem;
 }
-main{
-    width: 100%;
-    height: 100vh;;
-    background-image: url("../res/photos/pricing/bg.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
+
+.col h3{
+  background-color: #FAFAFA;
+  border: #009688 1px solid;
+  border-radius: 1.2rem;
+}
+
+.col-body{
+  margin-top: .5rem;
+  width: 100%;
+  height: auto;
+  background-color: #FAFAFA;
+  border: #009688 1px solid;
+  border-radius: 1.2rem;
+}
+
+.col-footer{
+  margin-top: .5rem;
+  width: 100%;
+  height: auto;
+  background-color: #FAFAFA;
+  border: #009688 1px solid;
+  border-radius: 1.2rem;
+}
+
+.tagline{
+  width: 100%;
+  background-color: black;
+  opacity: .7;
+}
+
+@media only screen and (max-width: 1100px) {
+main .row{
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+
+  main .col{
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
